<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_blue_abstract"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:textColor="@color/black"
        android:id="@+id/profile_title_text_view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/title_text_size"/>
    <EditText
        android:id="@+id/profile_login_edittext"
        android:hint="@string/profile_login_edittext_hint"
        android:layout_marginTop="@dimen/edittext_margin_top"
        app:layout_constraintTop_toBottomOf="@id/profile_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        />
    <EditText
        android:id="@+id/profile_password_edittext"
        android:hint="@string/profile_password_edittext_hint"
        android:layout_marginTop="@dimen/edittext_margin_top"
        app:layout_constraintTop_toBottomOf="@id/profile_login_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        />
    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/profile_password_edittext"
        android:id="@+id/profile_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:text="@string/profile_button_text"
        android:textColor="@color/black"
        android:backgroundTint="@color/deep_blue"
        />


</androidx.constraintlayout.widget.ConstraintLayout>