<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_blue_abstract"
android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

    <TextView
        android:textColor="@color/black"
        android:id="@+id/profile_title_text_view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/title_text_size"/>
    <EditText
        android:inputType="textWebEmailAddress"
        android:id="@+id/profile_login_edittext"
        android:hint="@string/profile_login_edittext_hint"
        android:layout_marginTop="@dimen/edittext_margin_top"
        app:layout_constraintTop_toBottomOf="@id/profile_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        />
    <EditText
        android:inputType="textWebPassword"
        android:id="@+id/profile_password_edittext"
        android:hint="@string/profile_password_edittext_hint"
        android:layout_marginTop="@dimen/edittext_margin_top"
        app:layout_constraintTop_toBottomOf="@id/profile_login_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        />

            <LinearLayout
                android:id="@+id/horizontal_container_profile_enter_layout"
                android:layout_width="392dp"
                android:layout_height="71dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/profile_password_edittext">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/fab_margin"
                    android:layout_weight="1"
                    android:text="@string/profile_ask_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/profile_create_new_profile_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/fab_margin"
                    android:layout_weight="1"
                    android:backgroundTint="#45000000"
                    android:text="@string/reg_button_text"
                    android:textColor="@color/checkbox_activated_color" />

            </LinearLayout>
    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/horizontal_container_profile_enter_layout"
        android:id="@+id/profile_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:text="@string/profile_button_text"
        android:textColor="@color/black"
        android:backgroundTint="@color/deep_blue"
        />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</ScrollView>