<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/data_manager_main_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/red_srteams_black_background">


    <TextView
        android:id="@+id/data_manager_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03BCC2ED"
        android:padding="@dimen/standart_padding"
        android:text="@string/data_manager_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/data_manager_title"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/first_horizontal_data_manager_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/standart_padding"
        app:layout_constraintTop_toBottomOf="@+id/data_manager_title_text_view">

        <TextView
            android:layout_width="242dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/delete_all_notes_text"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/delete_storage_button"
            style="@style/delete_all_notes_img_button_style"
            android:clickable="true"

            android:focusable="true"
            android:src="@drawable/ic_baseline_delete_forever_24"
            app:tint="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/standart_padding"
        app:layout_constraintTop_toBottomOf="@+id/first_horizontal_data_manager_layout">

        <TextView
            android:id="@+id/data_manager_switch_text_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/way_of_storage_local"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/data_manager_switch"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>