<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_background_4"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/note_edit_img_view"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="68dp"
            android:layout_marginEnd="68dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clickable="true"
            android:focusable="true"/>
        
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/note_edit_img_view"
            android:layout_width="match_parent"
            app:chipSpacingHorizontal="24dp"
            app:checkedChip="@+id/note_chip"
            style="@style/CustomChipTheme"
            app:singleSelection="true"
            android:layout_height="50dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/note_chip"
                style="@style/CustomChipTheme"
                android:layout_marginStart="20dp"
                android:textAlignment="center"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Note"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/to_do_list_chip"
                style="@style/CustomChipTheme"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="ToDo List"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/photo_chip"
                style="@style/CustomChipTheme"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Photo"/>

        </com.google.android.material.chip.ChipGroup>

        <EditText
            android:id="@+id/title_edittext"
            style="@style/title_edittext_style"
            android:hint="@string/add_title_hint"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/chip_group"
            tools:ignore="MissingConstraints"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@color/black"/>

        <EditText
            android:id="@+id/description_edittext"
            style="@style/description_edittext_style"
            android:hint="@string/notes_description_hint_text"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/title_edittext"
            tools:ignore="MissingConstraints"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@color/black"/>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_button"
            android:layout_margin="50dp"
            style="@style/apply_button_style"
            app:cornerRadius="16dp"
            android:text="@string/apply_button_text"
            app:layout_constraintTop_toBottomOf="@id/description_edittext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>